- `ChainSC` and `ChainRNA` example objects updated accordingly
- Unit tests updated accordingly
- Wiki page updated accordingly
- `updateObject` generic method imported from `BiocGenerics` 
- New generic methods definition moved to AllGenerics.R
- Change in class definition to store current packageVersion
- `BASiCS_LoadChain` function updated to deal with old class definition and
.txt storage.
- Shorter welcome message. 
- Sanity checks in `BASiCS_TestDE` moved to separate file. 
- Updated code indentation in `BASiCS_TestDE`
- Warning in `BASiCS_DetectHVG` and `BASiCS_DetectLVG` when user provides
posterior probability thresholds as input
- Unused argument removed from `HiddenEFDR` and `HiddenEFNR` functions
- Minor changes to pass R CMD check
- Check library passes R CMD BiocCheck
- Tidy up NAMESPACE
- Tidy up NEWS
- Merge Devel_class into master branch

version 0.99.13: (2017-10-17)  
- @neling email added to DESCRIPTION + author contributions
  
version 0.99.14: (2017-10-19) 
- Added checks to ensure input `SingleCellExperiment` object has all info

version 1.0.0: (2017-10-30)
- Bioconductor 3.6 release

version 1.1.0: (2017-10-30)
- Version number bump after bioconductor 3.6 release

version 1.1.1: (2017-11-08)
- 'ggplot2' added to imports
- Default value for SpikeInfo changed to NULL in `newBASiCS_Data` function
- Cleaning of `HiddenBASiCS_MCMCcppNoSpikes` 
- Cleaning of full conditionals for no-spikes implementation
- Fixed bug in stochastic reference implementation
- Added unit test for no-spikes case (estimation)
- Minor tyle changes to merge regression case
- 'Eta' parameter removed from `Summary` method (regression case only)
- Corrected HPD interval calculation for epsilon and sigma2 (regression case)
- Added mark for 'ExcludedFromRegression' genes in `BASiCS_TestDE`

version 1.1.2: (2017-11-08)
- Skeleton for sampler with integrated out s

version 1.1.3: (2017-11-08)
- Collapsed sampler implemented (to be tested)