@@ -11,11 +11,11 @@ test_that("Denoised counts match the given seed",
             
             # Checks for 2 arbitrary sets of genes / cells
             
-            DCcheck0 <- c(0.000, 0.000, 0.000, 4.765, 4.765)
+            DCcheck0 <- c(0.000, 0.000, 0.000, 4.762, 4.762)
             DCcheck <- as.vector(round(DC[1:5,1], 3))
             expect_that(all.equal(DCcheck, DCcheck0), is_true())
             
-            DCcheck0 <- c(0.000, 2.200, 0.000, 0.000, 2.638)
+            DCcheck0 <- c(0.000, 2.215, 0.000, 0.000, 2.677)
             DCcheck <- as.vector(round(DC[10,1:5], 3))
             expect_that(all.equal(DCcheck, DCcheck0), is_true())
           })
