@@ -9,19 +9,19 @@ test_that("paramater estimations match the given seed",
   PostSummary <- Summary(Chain)
             
   # Check if parameter estimates match for the first 5 genes and cells
-  Mu <- c(7.827, 4.818,  4.079,  5.101, 18.603)
+  Mu <- c(7.627, 4.786,  4.024,  5.290, 18.464)
   MuObs <- as.vector(round(displaySummaryBASiCS(PostSummary, "mu")[1:5,1],3))
   expect_that(all.equal(MuObs, Mu), is_true())
             
-  Delta <- c(1.140, 2.030, 0.727, 1.562, 0.646)
+  Delta <- c(1.161, 2.118, 0.721, 1.496, 0.646)
   DeltaObs <- as.vector(round(displaySummaryBASiCS(PostSummary, "delta")[1:5,1],3))
   expect_that(all.equal(DeltaObs, Delta), is_true())
 
-  Phi <- c(1.102, 1.034, 0.872, 1.005, 0.906)
+  Phi <- c(1.103, 1.027, 0.911, 1.018, 0.892)
   PhiObs <- as.vector(round(displaySummaryBASiCS(PostSummary, "phi")[1:5,1],3))
   expect_that(all.equal(PhiObs, Phi), is_true())
             
-  S <- c(0.290, 0.548, 0.082, 0.225, 0.505)
+  S <- c(0.272, 0.526, 0.073, 0.221, 0.502)
   SObs <- as.vector(round(displaySummaryBASiCS(PostSummary, "s")[1:5,1],3))
   expect_that(all.equal(SObs, S), is_true())
 })
